# bitbox-wallet-app

./: .dockerignore  .envrc  .git-blame-ignore-revs  .gitignore  .gitmessage  .gitmodules  .golangci.yml  .travis.yml  AGENTS.md  APP_VERSION  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.travis  Gopkg.toml  LICENSE  Makefile  README.md  SECURITY.md  android-env.mk.inc  appveyor.yml  env.mk.inc  go.mod  go.sum  hardening.mk.inc  travis_rsa.enc  version.mk.inc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: account_derivation_spec.go  account_derivation_spec_test.go  account_discovery.go  account_discovery_test.go  account_planning.go  account_planning_test.go  accountcodes.go  accounts.go  accounts_test.go  amounts.go  amounts_test.go  aopp.go  aopp_test.go  arguments.go  backend.go  backend_test.go  balance_statement.go  balance_statement_test.go  chart.go  chart_test.go  coin_fiat_prices_test.go  coin_policy.go  coin_policy_test.go  connectkeystore.go  connectkeystore_test.go  devservers_export.go  erc20.go  errors.go  handlers.go  keystore.go  lightning.go  lightning_test.go  lightning_topup.go  lightning_topup_test.go  mock.go  notes.go  notes_test.go  notifier.go  rates.go  swap.go  (+7 more)
breeztest/: breeztest_disabled.go  breeztest_enabled.go
dbbdevice/: dbbdevice.go  dbbdevice_test.go  error.go  manager.go  status.go
dbbmobile/: README.md  dbbmobile.go
deterministicwallet/: deterministicwallet.go  deterministicwallet_test.go  sign.go  (+1 more)
frontends/android/BitBoxApp/app/src/main/cpp/: CMakeLists.txt  signal_handler.c
(+2248 files in other folders)
